# experimental_video_retrieval

./: .gitignore  JOURNAL.md  README.md  pyproject.toml
experiments/: test_fingerprints.py  test_synthetic.py
video_retrieval/fingerprints/: __init__.py  temporal_derivative.py  trajectory.py
video_retrieval/models/: dinov3.py
video_retrieval/utils/: video.py
